libstdc++-v3/include/c_compatibility/math.h
@@ -1,6 +1,7 @@
 // -*- C++ -*- compatibility header.
 
-// Copyright (C) 2002, 2007 Free Software Foundation, Inc.
+// Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008
+// Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -76,6 +77,6 @@ using std::islessgreater;
 using std::isunordered;
 #endif
 
-#endif // __GXX_EXPERIMENTAL_CXX0X__
+#endif
 
 #endif
